--- a/src/components/resetpassword.css
+++ b/src/components/resetpassword.css
@@ -1,5 +1,18 @@
 * {
   box-sizing: border-box;
+  
+  margin: 0;
+}
+html,
+body{
+  width: 100%;
+  height: 100vh;
+  
+}
+.resetpassword{
+  min-height:100vh;
+ 
+ 
 }
 .resetpassword .login_main {
   margin-top: 20px;
@@ -42,6 +55,15 @@
   outline: 2px solid orange;
   border: none;
   box-shadow: 0px 4px 4px rgba(247, 131, 29, 0.18);
+}
+.resetpassword .input_box:focus + label {
+  background: -webkit-linear-gradient(
+    94.64deg,
+    #ed1c24 0%,
+    #faa61a 100%
+  ) !important;
+  -webkit-background-clip: text !important;
+  -webkit-text-fill-color: transparent !important;
 }
 
 .resetpassword .form_label {
@@ -99,8 +121,8 @@
 }
 
 .resetpassword .login_banner_img {
-  width: 435.15px;
-  height: 500.73px;
+  width: auto;
+  height: auto;
 left: 158.16px;
 top: 274.13px;
 filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
@@ -317,13 +339,13 @@ color: #128807;
   border: 9px solid #fff;
   border-color: transparent transparent #fff #fff;
   transform-origin: 0 0;
-  /* box-shadow: 0px 0px 14px rgba(0, 0, 0, 0.1); */
+ 
   transform: rotate(223deg);
 
 }
 .resetpassword .password_match::before {
   z-index: 10;
-  /* content: ""; */
+
   position: absolute;
   width: 0;
   height: 0;
@@ -380,13 +402,13 @@ color: #128807;
   border: 9px solid #fff;
   border-color: transparent transparent #fff #fff;
   transform-origin: 0 0;
-  /* box-shadow: 0px 0px 14px rgba(0, 0, 0, 0.1); */
+  
   transform: rotate(223deg);
 
 }
 .resetpassword .password_notmatch::before {
   z-index: 10;
-  /* content: ""; */
+
   position: absolute;
   width: 0;
   height: 0;
@@ -425,14 +447,14 @@ font-style: normal;
 font-weight: 500;
 font-size: 12px;
 line-height: 15px;
-/* identical to box height */
+
 text-align: right;
 margin-left: 38px;
 color: #A7A9AC;
 }
 
 .resetpassword .banner-img{
-  /* background: #FFFDF9; */
+
   margin:auto;
   display: block; 
   text-align: center;
@@ -451,10 +473,10 @@ color: #A7A9AC;
   background-size: 342px 458px;
   z-index: -1;
 }
-@media screen and (max-width: 1920px) and (min-width: 1660px){
+/* @media screen and (max-width: 1920px) and (min-width: 1660px){
 
 .resetpassword .login_banner_img{
-  /* background: #FFFDF9; */
+
   margin:auto;
   display: block; 
   text-align: center;
@@ -519,7 +541,7 @@ color: #A7A9AC;
   margin-top: 114%;
 }
 
-}
+} */
 
 
 /* @media screen and (max-width: 1199px) and (min-width: 992px) {
